<resources>
    <string name="app_name">LifeandWorksofRizal</string>
    <string name="family1">Paciano Rizal Mercado y Alonso Realonda was a Filipino general and revolutionary, and the older brother of José Rizal, the national hero of the Philippines.</string>
    <string name="family2">Saturnina Hidalgo. Saturnina Rizal Mercado de Hidalgo (June 4, 1850 – September 14, 1913; née Rizal Mercado y Alonso Realonda ), or simply Saturnina Hidalgo, was the eldest sister of Philippine national hero José Rizal. She was married to Manuel T. Hidalgo, a native and one of the richest persons in Tanauan, Batangas. She was known as Neneng.</string>
    <string name="family3">Teodora Alonso Realonda y Quintos (9 November 1827 – 16 August 1911) was a wealthy woman in the Spanish colonial Philippines. She was best known as the mother of the Philippines’ national hero Jose Rizal. Realonda was born in Santa Cruz, Manila. She was also known for being a disciplinarian and hard-working mother. Her medical condition inspired Rizal to take up medicine.</string>
    <string name="family4">On May 11, 1818, Francisco Mercado, father of the national hero Dr. Jose Rizal, was born in Biñan, Laguna.
He first attended a Latin school in his hometown, and later was sent to study Philosophy and Latin at the College of San Jose in Manila.

He got married to Teodora Alonzo on June 28, 1848 and had eight children, including Jose Rizal.

As a young industrious and efficient farmer, Francisco was able to raise a family that was financially comfortable.

He was a tenant of a Dominican estate in Calamba, Laguna and through hard work, he had increased his rented landholdings.

He was respected by the townspeople that he became cabeza de barangay of Calamba.

His family name was changed to "Rizal" after an order from Governor General Narciso Claveria that all native Filipinos should have a distinctive family name.

After the execution of his son Jose in Bagumbayan on December 30, 1896, Francisco felt deeply the injustice that was brought by the Spaniards and died shortly afterward, on January 5, 1898 at the age of 79, in the house of his daughter Narcisa.</string>
    <string name="family5">Lucia Rizal was married to Mariano Herbosa of Calamba. When her husband died in the cholera epidemic in 1889, he was denied a Christian burial because he was the brother-in-law of Dr. Jose Rizal. She sent her two sons, Estanislao and Teodisio to be educated in the school Jose Rizal established in Dapitan during his exile.</string>
    <string name="family6">Maria Rizal is the sixth child in the family. It was to her whom Jose talked about wanting to marry Josephine Bracken when the majority of the Rizal family was apparently not amenable to the idea. Jose had also brought up to Maria his plan of establishing a Filipino colony in North British Borneo.</string>
    <string name="family7">Soledad Rizal, youngest of Jose Rizal sisters, was educated as a teacher. His letters scolded her for marrying without the blessing of their parents.</string>
    <string name="family8">José Protasio Rizal was the brother of José Rizal. (There is no other information about him)</string>
    <string name="family9">Narcisa Rizal was the third eldest sibling of Jose Rizal. She was a teacher and a musician by profession. It was Narcisa who looked for and found the unmarked grave of Dr. Jose Rizal at the Paco cemetery after his martyrdom.</string>
    <string name="family10">Trinidad Rizal, or ‘Trining’, was the tenth child and the custodian of Rizal’s last and greatest poem, "Mi Ultimo Adios."</string>
    <string name="family11">Concepcion Rizal, also called ‘Concha’ by her siblings, was the eight child of the Rizal family. She died at the age of three. Of his sisters, it is said that Pepe loved most the little Concha who was a year younger than him. When Concha died of sickness in 1865, Jose mournfully wept at losing her. He later wrote in his memoir, “When I was four years old, I lost my little sister Concha, and then for the first time I shed tears caused by love and grief.”</string>
    <string name="family12">Josefa Rizal’s, or Panggoy, was the ninth child in the family who died a spinster. In Jose Rizal letter to his sister, Jose praised her for nearly mastering the English language. Jose also wrote about the 20 pesos he sent, the 10 pesos of the amount was supposed for a lottery ticket. This indicates that Jose did not stop ‘investing’ in lottery tickets despite winning 6, 200 pesos in September the previous year. After Jose’s death, the epileptic Josefa joined the Katipunan.</string>
    <string name="family13">Olimpia Rizal was a sibling of José Rizal. She married Silvestre Ubaldo, a telegraph operator from Manila. She died at childbirth.</string>
    <string name="profession1">Actor<br />
Agriculturist<br />
Ambassador of Good Will<br />
Animal Lover<br />
Anthropologist<br />
Archaeologist<br />
Ascetic</string>
    <string name="profession2">Book lover<br />
Botanist<br />
Businessman</string>
    <string name="profession3">Cartographer<br />
Chess Player<br />
Citizen of the World<br />
Commentator<br />
Conchologist</string>
    <string name="profession4">Dramatist</string>
    <string name="profession5">Economist<br />
Educator<br />
Essayist<br />
Ethnologist</string>
    <string name="profession6">Farmer<br />
Father of community school<br />
Fencer<br />
Folklorist<br />
Freemason abroad</string>
    <string name="educ1">- was his mother she was patient, conscientious and , understanding<br />
- she discovered that her son had a talent for poetry<br />
- she encouraged him to write poems</string>
    <string name="educ2">- Maestro Celestino<br />
- Maestro Lucas<br />
- Leon Monro</string>
    <string name="educ3">- June, 1869 Rizal left for Binan<br />
- Was accompanied by Paciano his older brother<br />
- He was taught by Maestro Justiniano<br />
- In academic studies, Rizal beat all Binan boys<br />
- He surpassed them all in Spanish, Latin, and other subjects</string>
    <string name="educ4">- Ateneo De Municipal established by the Jesuits<br />
- Rizal entered in 1872<br />
- He belonged to the class composed of Spaniards, mestizos and Filipinos<br />
- His teacher was Fr. Jose Bech<br />
- He was considered as an inferior and was placed at the buttom of the class<br />
- By the end of the month he became the emperor and received a prize, a religious picture<br />
- To improve his Spanish Rizal took private lessons in Santa Isabel College<br />
- During his 4th year in Ateneo he received 5 medals and graduated as sobresaliente<br />
- He graduated on March 23, 1877(16 years old)<br />
- Received the degree of bachelor of arts, with highest honors not a valedictiorian</string>
    <string name="educ5">- an emperor inside the classroom<br />
- campus leader<br />
- active member and became a secretary, the Marian Congregation Religious Society<br />
- member of the Academy of Spanish Literature and the Academy of Natural Sciences<br />
- poet<br />
- studied painting under the famous Spanish Painter, Agustin Saez<br />
- improved his sculpture talents under the supervision of Romualdo de Jesus<br />
- engaged in gymnastics and fencing and continued the physical training under his sports-minded Tio Manuel.</string>
    <string name="educ6">- After graduating , he continued his education at UST<br />
- He finished a year in Philosophy and Letters<br />
- He decided to shift to a medical course<br />
- UST was under the Dominicans , rival of the Jesuits in education<br />
- Remained loyal to Ateneo participated in extracurricular activities in Ateneo and completed a course in surveying<br />
- As a Thomasian he won more literary laurels<br />
- During his first term in 1877-1878 in UST, he studied Cosmology, Metaphysics , Theodicy and History of Philosophy.<br />
- It was during the school term 1878-1879 that Rizal pursued his studies in medicine</string>
    <string name="educ7">- He wanted to be a physician so that he could cure his mother’s failing eyesight<br />
- Fr. Pablo Ramon, the Father Rector of Ateneo whom he consulted for a choice of career, finally answered his letter , and recommended medicine</string>
    <string name="educ8">- Curso de Ampiacion or Advanced course in Physics, Chemistry and Natural History.<br />
- Out of the 28 young men taking Ampliacion only four including Rizal were granted the privilege of taking simultaneously the preparatory course and the first year of medicine<br />
- Rizal also received his four year practical training in medicine at the Hospital de San Juan de Dios in Intramuros<br />
        - During his last year at the University, Rizal had obtained the global grade of Notable(Very Good) in all of his subjects, and he was the second best student in a decimated class of seven who passed the medicine course. After which, Rizal decided to study in Spain.</string>
    <string name="educ9">- His departure for Spain was kept secret from Spanish Authorities, friars and even his parents especially his mother because she would not allow him to go<br />
- To avoid detection , he used the name Jose Mercado<br />
- On May 3, 1882 he boarded on Salvadora bound for Singapore where he was the only Filipino passenger<br />
- On November 3, 1882, he enrolled in Universidad Central de Madrid taking up two courses: Philosophy an Letters and Medicine<br />
- On June 21, 1884 , he conferred the degree of Licentiate in Medicine<br />
- The Following academic year , he studied and passed all subjects leading to the degree of doctor of medicine<br />
- Unfortunately, he was not able to submit the thesis required for graduation nor paid the corresponding fees<br />
- With that, he was not awarded his Doctor’s Diploma<br />
        - Jose Rizal also finished his studies in Philosophy and Letters with higher grades<br />
- He was awarded the Degree of Licentiate in Philosophy and Letters by the Universidad Central de Madrid June 19, 1885 with the rating of excellent.</string>
    <string name="educ10">- Jose Rizal went to Paris and Germany in order to specialize in ophthalmology. Among all branches, he chose this specialization because he wanted to cure his mother’s failing eyesight.<br />
- In 1885, after studying at the Universidad Central de Madrid, Rizal, who was then 24 years old, went to Paris to acquire more knowledge in ophthalmology
</string>
    <string name="educ11">- Maximo Viola<br />
- Senor Eusebio Corominas<br />
- Don Miguel Morayta<br />
- Dr. Louis de Weckert<br /><br />

- On February 3, 1886, after gathering some experience in ophthalmology, he left Paris and went to Heidelberg, Germany<br />
- He worked at the University Eye Hospital under the direction of Dr. Otto Becker, a distinguished German ophthalmologist<br />
- On April 22, 1886, Rizal wrote a poem entitled A Las Flores de Heidelberg (To the Flowers of Heidelberg) because he was fascinated by the blooming flowers along the Neckar River, which was the light blue flower called “forget-me-not”.<br />
- On August 14, 1886, Rizal arrived in Leipzig. There, he attended some lectures at the University of Leipzig on history and psychology</string>
    <string name="educ12">- to gain further his studies in science and languages<br />
- to observe the economic and political conditions of the German nation <br />
- to associate with the famous scientists and scholars<br />
- lastly to publish his novel Noli Me Tangere</string>
    <string name="educ13">Jose Rizal earned a Licentiate in Medicine at the Universidad Central de Madrid, where he also took courses in philosophy and literature. It was in Madrid that he began writing Noli Me Tangere. He also attended classes in the University of Paris and, in 1887, he completed his eye specialization course at the University of Heidelberg. It was also in that year that Rizal’s first novel was published in Berlin.</string>
</resources>