<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Family">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Paciano Rizal (Brother)"
        android:background="@color/teal_200"
        android:textStyle="bold"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family1"
        android:textSize="10sp"
        android:background="@color/purple_200"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Saturnina Hidalgo (Sister)"
        android:background="@color/teal_200"
        android:textStyle="bold"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family2"
        android:textSize="10sp"
        android:background="@color/purple_200"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Teodora Alonso (Mother)"
        android:background="@color/teal_200"
        android:textStyle="bold"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family3"
        android:textSize="10sp"
        android:background="@color/purple_200"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Francisco Mercado (Father)"
        android:background="@color/teal_200"
        android:textStyle="bold"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family4"
        android:textSize="10sp"
        android:background="@color/purple_200"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lucia Mercado (Sister)"
        android:background="@color/teal_200"
        android:textStyle="bold"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family5"
        android:textSize="10sp"
        android:background="@color/purple_200"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Maria Mercado (Sister)"
        android:background="@color/teal_200"
        android:textStyle="bold"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family6"
        android:textSize="10sp"
        android:background="@color/purple_200"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Soledad Mercado (Sister)"
        android:background="@color/teal_200"
        android:textStyle="bold"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family7"
        android:textSize="10sp"
        android:background="@color/purple_200"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="José Protasio Rizal (Brother)"
        android:background="@color/teal_200"
        android:textStyle="bold"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family8"
        android:textSize="10sp"
        android:background="@color/purple_200"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Narcissa Mercado (Sister)"
        android:background="@color/teal_200"
        android:textStyle="bold"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family9"
        android:textSize="10sp"
        android:background="@color/purple_200"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Trinidad Mercado (Sister)"
        android:background="@color/teal_200"
        android:textStyle="bold"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family10"
        android:textSize="10sp"
        android:background="@color/purple_200"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Concepción Mercado (Sister)"
        android:background="@color/teal_200"
        android:textStyle="bold"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family11"
        android:textSize="10sp"
        android:background="@color/purple_200"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Josefa Mercado (Sister)"
        android:background="@color/teal_200"
        android:textStyle="bold"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family12"
        android:textSize="10sp"
        android:background="@color/purple_200"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Olympia Mercado (Sister)"
        android:background="@color/teal_200"
        android:textStyle="bold"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/family13"
        android:textSize="10sp"
        android:background="@color/purple_200" />

</LinearLayout>


</ScrollView>