<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Education">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Doña Teodora"
            android:background="@color/teal_200"
            android:textStyle="bold"
            android:textSize="30sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/educ1"
            android:textSize="10sp"
            android:background="@color/purple_200"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Private Tutors of Rizal"
            android:background="@color/teal_200"
            android:textStyle="bold"
            android:textSize="30sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/educ2"
            android:textSize="10sp"
            android:background="@color/purple_200"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rizal goes to Biñan,Laguna"
            android:background="@color/teal_200"
            android:textStyle="bold"
            android:textSize="30sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/educ3"
            android:textSize="10sp"
            android:background="@color/purple_200"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Life and Studies in Ateneo"
            android:background="@color/teal_200"
            android:textStyle="bold"
            android:textSize="30sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/educ4"
            android:textSize="10sp"
            android:background="@color/purple_200"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Extra Curricular Involvement"
            android:background="@color/teal_200"
            android:textStyle="bold"
            android:textSize="30sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/educ5"
            android:textSize="10sp"
            android:background="@color/purple_200"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Medical Studies in University of Sto. Thomas (1877-1882)"
            android:background="@color/teal_200"
            android:textStyle="bold"
            android:textSize="30sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/educ6"
            android:textSize="10sp"
            android:background="@color/purple_200"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Reasons why Rizal wanted to study Medicine:"
            android:background="@color/teal_200"
            android:textStyle="bold"
            android:textSize="30sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/educ7"
            android:textSize="10sp"
            android:background="@color/purple_200"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pre- Med Course"
            android:background="@color/teal_200"
            android:textStyle="bold"
            android:textSize="30sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/educ8"
            android:textSize="10sp"
            android:background="@color/purple_200"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Academic Journey To Spain ( 1882-1885 )"
            android:background="@color/teal_200"
            android:textStyle="bold"
            android:textSize="30sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/educ9"
            android:textSize="10sp"
            android:background="@color/purple_200"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Opthalmology studies and travels in Europe"
            android:background="@color/teal_200"
            android:textStyle="bold"
            android:textSize="30sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/educ10"
            android:textSize="10sp"
            android:background="@color/purple_200"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rizal friends in Europe:"
            android:background="@color/teal_200"
            android:textStyle="bold"
            android:textSize="30sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/educ11"
            android:textSize="10sp"
            android:background="@color/purple_200"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Resons Why Rizal choose to reside in germane longer:"
            android:background="@color/teal_200"
            android:textStyle="bold"
            android:textSize="30sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/educ12"
            android:textSize="10sp"
            android:background="@color/purple_200"
            android:layout_marginBottom="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/educ13"
            android:textSize="10sp"
            android:background="@color/purple_200"
            android:layout_marginBottom="20dp"/>



    </LinearLayout>

</ScrollView>